[package]
name = "pico_filter"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-executor = { version = "0.3.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-rp = { version = "0.1.0", path = "../../embassy/embassy-rp" ,features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = "0.1.3"
embassy-net = { version = "0.1.0", path = "../../embassy/embassy-net", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-sync = { version = "0.3.0", path = "../../embassy/embassy-sync", features = ["defmt", "nightly"] }

cyw43 = { path = "../../embassy/cyw43", features = ["defmt", "firmware-logs"] }
cyw43-pio = { path = "../../embassy/cyw43-pio", features = ["defmt", "overclock"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = { version = "1.1", features = ["nightly"]}

[profile.release]
debug = 2
